--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,27 +4,31 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#5DADE2" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Pro Recruit Technologies - Your trusted partner in recruitment. Connecting talented professionals with leading organizations across India since 2024."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="keywords" content="recruitment, staffing, jobs, employment, HR solutions, Pro Recruit Technologies, India" />
+    <meta name="author" content="Pro Recruit Technologies" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://prorecruittechnologies.com/" />
+    <meta property="og:title" content="Pro Recruit Technologies - Making Dreams Come True" />
+    <meta property="og:description" content="Your trusted partner in recruitment. Connecting talented professionals with leading organizations." />
+    <meta property="og:image" content="%PUBLIC_URL%/images/logo.svg" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://prorecruittechnologies.com/" />
+    <meta property="twitter:title" content="Pro Recruit Technologies - Making Dreams Come True" />
+    <meta property="twitter:description" content="Your trusted partner in recruitment. Connecting talented professionals with leading organizations." />
+    <meta property="twitter:image" content="%PUBLIC_URL%/images/logo.svg" />
+    
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>Pro Recruit Technologies - Making Dreams Come True</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
