Add altruist.png, enhance SEO keywords, optimize images for faster loading

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,10 +7,12 @@
     <meta name="theme-color" content="#5DADE2" />
     <meta
       name="description"
-      content="Pro Recruit Technologies - Your trusted partner in recruitment. Connecting talented professionals with leading organizations across India since 2024."
+      content="Pro Recruit Technologies - Leading recruitment consultancy in Bangalore. Job search, staffing solutions, IT recruitment, BPO hiring, permanent & contract staffing. Making dreams come true since 2024."
     />
-    <meta name="keywords" content="recruitment, staffing, jobs, employment, HR solutions, Pro Recruit Technologies, India" />
+    <meta name="keywords" content="pro recruit, prorecruit, recruitment agency, job consultancy, staffing solutions, job search, employment services, IT recruitment, BPO jobs, KPO hiring, permanent staffing, contract staffing, executive search, volume hiring, Bangalore recruitment, India jobs, career opportunities, job placement, HR solutions, talent acquisition, recruitment consultancy, job portal, fresher jobs, experienced professionals" />
     <meta name="author" content="Pro Recruit Technologies" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
