Enhance SEO with Bangalore keywords, fix form scroll to center on Next/Previous

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#5DADE2" />
     <meta
       name="description"
-      content="Pro Recruit Technologies - Leading recruitment consultancy in Bangalore. Job search, staffing solutions, IT recruitment, BPO hiring, permanent & contract staffing. Making dreams come true since 2024."
+      content="Pro Recruit Technologies - Leading recruitment agency in Bangalore. Jobs in Bangalore, placement consultancy, IT recruitment, BPO jobs, fresher jobs. Staffing solutions for software engineers, HR, finance, healthcare. Making dreams come true since 2024."
     />
-    <meta name="keywords" content="pro recruit, prorecruit, recruitment agency, job consultancy, staffing solutions, job search, employment services, IT recruitment, BPO jobs, KPO hiring, permanent staffing, contract staffing, executive search, volume hiring, Bangalore recruitment, India jobs, career opportunities, job placement, HR solutions, talent acquisition, recruitment consultancy, job portal, fresher jobs, experienced professionals" />
+    <meta name="keywords" content="pro recruit, prorecruit, jobs in Bangalore, recruitment agencies Bangalore, placement consultancy Bangalore, recruitment consultants, placement services, staffing agency, talent acquisition, software engineer jobs, Java developer jobs, Python developer jobs, full stack developer, AI jobs, machine learning jobs, DevOps engineer jobs, data scientist jobs, cloud engineer jobs, fresher jobs, fresher jobs Bangalore, entry level jobs, campus recruitment, HR jobs, finance jobs, accounting jobs, customer service jobs, BPO jobs, sales jobs, marketing jobs, digital marketing jobs, business analyst jobs, operations jobs, healthcare jobs, legal jobs, real estate jobs, banking jobs, insurance jobs, education jobs, hospitality jobs, retail jobs, construction jobs, IT recruitment, software jobs, tech careers, job portal Bangalore, employment agency, career opportunities, job placement, recruitment firm, hiring agency, Magadi Road recruitment" />
     <meta name="author" content="Pro Recruit Technologies" />
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
